<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Question5Fragment"
    android:background="#005cb9">

    <ImageView
        android:id="@+id/green2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gray"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_blue"/>
    <ImageView
        android:id="@+id/gray2"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintEnd_toStartOf="@id/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_white"/>
    <ImageView
        android:id="@+id/white2"
        app:layout_constraintStart_toEndOf="@id/gray"
        app:layout_constraintEnd_toStartOf="@id/blue"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_gray"/>
    <ImageView
        android:id="@+id/blue2"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_green"/>

    <TextView
        android:id="@+id/pregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten_s_conocimiento_sobre_los_emprendimientos_que_estamos_promocionando_en_manantiales"
        android:textSize="@dimen/question_title_size_small"
        android:textAlignment="center"
        android:textColor="@color/white"/>
    <LinearLayout
        android:id="@+id/Qgroup"
        android:layout_marginTop="@dimen/answers_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <CheckBox
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:id="@+id/chk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilares_venta_de_departamentos_edificios_torres_etc"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/checkbox_text_size_small"/>
        <CheckBox
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:id="@+id/chk2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flats_del_parque_venta_de_departamentos_edificios_torres_etc"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/checkbox_text_size_small"/>
        <CheckBox
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:id="@+id/chk3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abras_venta_de_lotes"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/checkbox_text_size_small"/>
        <CheckBox
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:id="@+id/chk4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casas_mirador_venta_de_casas_venta_de_housing_etc"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/checkbox_text_size_small"/>
        <CheckBox
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:id="@+id/chk5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/housing_de_miradores_venta_de_casas_venta_de_housing_etc"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/checkbox_text_size_small"/>
        <CheckBox
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:id="@+id/chk6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manantiales_10_a_os_parque_la_ca_ada_etc"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/checkbox_text_size_small"/>
        <CheckBox
            android:layout_marginTop="@dimen/checkbox_margin_top"
            android:id="@+id/chk7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alquileres_casas_departamentos_casonas_etc"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/checkbox_text_size_small"/>
    </LinearLayout>



    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="@dimen/button_next_width"
        android:textSize="@dimen/button_text_size"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        android:backgroundTint="#8893a3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Qgroup"
        app:layout_constraintBottom_toTopOf="@id/logo"/>
    <ImageView
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/blue"
        android:layout_marginBottom="20dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/edisur_png" />


    <ImageView
        android:id="@+id/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gray"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_green"/>
    <ImageView
        android:id="@+id/gray"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintEnd_toStartOf="@id/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_gray"/>
    <ImageView
        android:id="@+id/white"
        app:layout_constraintStart_toEndOf="@id/gray"
        app:layout_constraintEnd_toStartOf="@id/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_white"/>
    <ImageView
        android:id="@+id/blue"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>