<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Question3Fragment"
    android:background="#005cb9">

    <ImageView
        android:id="@+id/green2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gray"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_blue"/>
    <ImageView
        android:id="@+id/gray2"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintEnd_toStartOf="@id/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_white"/>
    <ImageView
        android:id="@+id/white2"
        app:layout_constraintStart_toEndOf="@id/gray"
        app:layout_constraintEnd_toStartOf="@id/blue"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_gray"/>
    <ImageView
        android:id="@+id/blue2"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_green"/>

    <TextView
        android:id="@+id/pregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿CONOCÍAS MANANTIALES?"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <RadioGroup
        android:id="@+id/Qgroup"
        app:layout_constraintTop_toBottomOf="@id/pregunta"
        app:layout_constraintStart_toStartOf="@id/pregunta"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Si"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_marginLeft="80dp"
            android:layout_marginTop="-10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vivo_ac"
                android:textColor="@color/white"
                android:layout_marginTop="-8dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/un_amigo_o_familiar_vive_ac"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="-8dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vengo_a_hacer_deportes_recreaci_n"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="-8dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/he_pasado_alguna_vez"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="-8dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/por_publicidades"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="-8dp"/>


        </LinearLayout>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </RadioGroup>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        android:backgroundTint="#8893a3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Qgroup"
        app:layout_constraintBottom_toTopOf="@id/logo"/>
    <ImageView
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/blue"
        android:layout_marginBottom="20dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/edisur_png" />


    <ImageView
        android:id="@+id/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gray"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_green"/>
    <ImageView
        android:id="@+id/gray"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintEnd_toStartOf="@id/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_gray"/>
    <ImageView
        android:id="@+id/white"
        app:layout_constraintStart_toEndOf="@id/gray"
        app:layout_constraintEnd_toStartOf="@id/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_white"/>
    <ImageView
        android:id="@+id/blue"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>