<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FormFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/green2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gray"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_blue"/>
    <ImageView
        android:id="@+id/gray2"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintEnd_toStartOf="@id/white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_white"/>
    <ImageView
        android:id="@+id/white2"
        app:layout_constraintStart_toEndOf="@id/gray"
        app:layout_constraintEnd_toStartOf="@id/blue"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_gray"/>
    <ImageView
        android:id="@+id/blue2"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_green"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/blue2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:textSize="@dimen/form_text_size"
            android:inputType="text"
            app:hintEnabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/apellido"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/form_text_size"
            android:importantForAutofill="no"
            android:inputType="text"
            app:hintEnabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dni_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/telefono"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_DNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:textSize="@dimen/form_text_size"
            android:inputType="number"
            app:hintEnabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/e_mail"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dni_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/form_text_size"
            app:hintEnabled="false" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/siguiente"
        android:layout_width="@dimen/button_next_width"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#8893a3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintBottom_toTopOf="@id/logo"/>

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/siguiente"
        app:layout_constraintBottom_toTopOf="@id/blue"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/edisur_logo_color"/>


    <ImageView
        android:id="@+id/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gray"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_green"/>
    <ImageView
        android:id="@+id/gray"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintEnd_toStartOf="@id/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_gray"/>
    <ImageView
        android:id="@+id/white"
        app:layout_constraintStart_toEndOf="@id/gray"
        app:layout_constraintEnd_toStartOf="@id/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_white"/>
    <ImageView
        android:id="@+id/blue"
        app:layout_constraintStart_toEndOf="@id/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="190dp"
        android:layout_height="10dp"
        android:background="@drawable/rectangle_blue"/>


</androidx.constraintlayout.widget.ConstraintLayout>